# solarsail

./: .gitignore  Cargo.toml  LICENSE  README.md
contracts/cw20/: Cargo.toml  README.md  tmp.rs
contracts/cw20/src/: lib.rs
