[workspace]
resolver = "2"
members = [
  "contracts/*",
  "packages/*",
]

[workspace.package]
version = "0.1.0"
authors = ["kiruse"]
edition = "2021"

[workspace.dependencies]
cosmwasm-schema = "1"
cosmwasm-std = { version = "1", features = ["cosmwasm_1_4"] }
cw-storage-plus = "1"
cw2 = "1"
schemars = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }
thiserror = { version = "1.0" }

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true
