# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "solarsail-cw20"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema.workspace = true
cosmwasm-std.workspace = true
cw-storage-plus.workspace = true
cw2.workspace = true
schemars.workspace = true
serde.workspace = true
thiserror.workspace = true

solarsail = { path = "../../packages/solarsail" }

[dev-dependencies]
cw-multi-test = "0.17"
